# typestate-rs

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
core/: Cargo.toml
core/src/: builders.rs  lib.rs
examples/: typestate_builder.rs  with_connection_string.rs
identity/: Cargo.toml
identity/src/: lib.rs
src/: builders.rs  lib.rs  models.rs
